feat(device) detect brand Prestigio: Root A10 3G (PMT4771_4G_RU), Node A8 3G (PMT4208_3G_E_RU, PMT4208_3G_EEA) feat(device) detect brand ZTE: Blade 10 Vita, Axon 9 Pro (A2019 Pro)
feat(device) added test for brand Samsung: Galaxy Tab A 10.5" LTE (2018), Galaxy Jean (SM-A605K)
feat(device) added test for brand Digma: Optima 1027N 3G

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -86,7 +86,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Axon Pro
+    model: Axon 9 Pro
   os_family: Android
   browser_family: Chrome
 -
