--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16724,6 +16724,10 @@ Prestigio:
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
+    - regex: 'PMT4208'
+      model: 'Node A8 3G'
+    - regex: 'PMT4771'
+      model: 'Root A10 3G'
     - regex: 'PMP7070C3G'
       model: 'MultiPad 4 Diamond 7.0" 3G'
     - regex: 'PGPS7799CIS08GBPG(?:[);/ ]|$)'
@@ -20693,10 +20697,14 @@ ZTE:
       model: 'Blade A71'
     - regex: 'A0722(?:[);/ ]|$)'
       model: 'Blade A7 Vita'
+    - regex: 'Blade 10 Vita(?:[);/ ]|$)'
+      model: 'Blade 10 Vita'
     - regex: 'ZTE (?:2050|V1050)(?:RU)?'
       model: 'Blade 20 Smart'
     - regex: 'ZTE Axon 7(?:[);/ ]|$)'
       model: 'Axon 7'
+    - regex: 'A2019G? Pro(?:[);/ ]|$)'
+      model: 'Axon 9 Pro'
     - regex: '902ZT(?:[);/ ]|$)'
       model: 'Axon 10 Pro 5G'
     - regex: 'A2021L?(?:[);/ ]|$)'
@@ -21011,8 +21019,6 @@ ZTE:
       model: 'Axon 7'
     - regex: 'A2018'
       model: 'Axon 7s'
-    - regex: 'A2019G Pro'
-      model: 'Axon Pro'
     - regex: 'B2017G'
       model: 'Axon 7 Mini'
     - regex: 'A2020(?:RU|G)? Pro(?:[);/ ]|$)'
