Adds detection for X-TIGI Hope 7 Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21301,14 +21301,14 @@ MYFON:
 
 # X-TIGI
 X-TIGI:
-  regex: 'X[-_]TIGI|Hope7[_ ]Mate|Photo_P15_Lite|SHARP_2'
+  regex: 'X[-_]TIGI|Hope7[_ ](?:Mate|Max)|Photo_P15_Lite|SHARP_2'
   device: 'smartphone'
   models:
     - regex: 'X-TIGI_JOY10_PRO'
       model: 'Joy 10 Pro'
       device: 'tablet'
-    - regex: 'Hope7[_ ]Mate'
-      model: 'Hope 7 Mate'
+    - regex: 'Hope7[_ ](Mate|Max)'
+      model: 'Hope 7 $1'
       device: 'tablet'
     - regex: 'X-TIGI_JOY7_MAX'
       model: 'Joy 7 Max'
