--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9316,3 +9316,21 @@
     model: Lightyear
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Hope7 Max) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Mobile Safari/537.36 OPR/64.2.3282.60128
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 64.2.3282.60128
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: X-TIGI
+    model: Hope 7 Max
+  os_family: Android
+  browser_family: Opera
