Adds detection for Logic L55A, L55B, L55S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23108,7 +23108,7 @@ iMars:
 
 # Logic (logicmobility.com)
 Logic:
-  regex: 'LOGIC[_ ](X[135]|X4M|L5D|X5[AFT]|X60G|L61|X60_PLUS)(:?[_ ]LITE2?)?(?:[);/ ]|$)'
+  regex: '(?:LOGIC[_ ](X[135]|X4M|L5D|X5[AFT]|X60G|L61|X60_PLUS)(:?[_ ]LITE2?)?|L55[ABS])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'LOGIC[_ ]X60_PLUS(?:[);/ ]|$)'
@@ -23118,6 +23118,8 @@ Logic:
     - regex: 'LOGIC[_ ](X5)[_ ]LITE2(?:[);/ ]|$)'
       model: '$1 Lite 2'
     - regex: 'LOGIC[_ ](X[13]|X4M|L5D|X5[AFT]|X60G|L61)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: '(L55[ABS])(?:[);/ ]|$)'
       model: '$1'
 
 # Cloud or Cloud TruConnect (www.cloudmobileusa.com)
