Adds detection for Logic L60

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23108,7 +23108,7 @@ iMars:
 
 # Logic (logicmobility.com)
 Logic:
-  regex: '(?:LOGIC[_ ](X50|X[135]|X4M|L5D|X5[AFT]|X60G|L61|X60_PLUS)(:?[_ ]LITE2?)?|L55[ABS])(?:[);/ ]|$)'
+  regex: '(?:LOGIC[_ ](X50|X[135]|X4M|L5D|X5[AFT]|X60G|L6[01]|X60_PLUS)(:?[_ ]LITE2?)?|L55[ABS])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'LOGIC[_ ]X60_PLUS(?:[);/ ]|$)'
@@ -23117,7 +23117,7 @@ Logic:
       model: '$1 Lite'
     - regex: 'LOGIC[_ ](X5)[_ ]LITE2(?:[);/ ]|$)'
       model: '$1 Lite 2'
-    - regex: 'LOGIC[_ ](X50|X[13]|X4M|L5D|X5[AFT]|X60G|L61)(?:[);/ ]|$)'
+    - regex: 'LOGIC[_ ](X50|X[13]|X4M|L5D|X5[AFT]|X60G|L6[01])(?:[);/ ]|$)'
       model: '$1'
     - regex: '(L55[ABS])(?:[);/ ]|$)'
       model: '$1'
