Adds detection for Gtel Infinity 9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7252,8 +7252,10 @@ Gtel:
   regex: 'Gtel'
   device: 'smartphone'
   models:
-    - regex: 'Infinity 8s'
+    - regex: 'Infinity 8s(?:[);/ ]|$)'
       model: 'Infinity 8s'
+    - regex: 'Infinity 9(?:[);/ ]|$)'
+      model: 'Infinity 9'
 
 # Hafury
 Hafury:
