Adds detection for X-TIGI Joy 10 Mate

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21303,11 +21303,14 @@ MYFON:
 
 # X-TIGI
 X-TIGI:
-  regex: 'X[-_]TIGI|Hope7[_ ](?:Mate|Max)|Photo_P15_Lite|SHARP_2'
+  regex: 'X[-_]TIGI|Hope7[_ ](?:Mate|Max)|JOY10 Mate|Photo_P15_Lite|SHARP_2|'
   device: 'smartphone'
   models:
     - regex: 'X-TIGI_JOY10_PRO'
       model: 'Joy 10 Pro'
+      device: 'tablet'
+    - regex: 'JOY10 Mate'
+      model: 'Joy 10 Mate'
       device: 'tablet'
     - regex: 'Hope7[_ ](Mate|Max)'
       model: 'Hope 7 $1'
