--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9352,3 +9352,21 @@
     model: KingPad SA10
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; JOY10 Mate Build/OPM2.171019.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/68.0.3440.91 Safari/537.36 OPR/60.0.2254.59405
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 60.0.2254.59405
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: X-TIGI
+    model: Joy 10 Mate
+  os_family: Android
+  browser_family: Opera
