--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23133,7 +23133,7 @@ Logic:
 
 # Cloud or Cloud TruConnect (www.cloudmobileusa.com)
 Cloud:
-  regex: '(?:Cyclone_C4|Storm_C3|Stratus_C5|Sunshine_T1)(?:[);/ ]|$)'
+  regex: '(?:Cyclone_C4|Storm_C3|Stratus_C5(?:_Elite)?|Sunshine_T1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Sunshine_T1)'
@@ -23141,6 +23141,8 @@ Cloud:
       model: '$1'
     - regex: 'Storm_C3'
       model: 'Storm C3'
+    - regex: 'Stratus_C5_Elite'
+      model: 'Stratus C5 Elite'
     - regex: '(Stratus_C5|Cyclone_C4)'
       model: '$1'
 
