Adds detection for Venturer brand and Venturer Challenger Pro 10.1"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18541,6 +18541,16 @@ Venso:
     - regex: '(CX-508|CX-551|Reiv 500|Creon F5)'
       model: '$1'
 
+# Venturer (https://venturer.com/)
+Venturer:
+  regex: 'VCT|VCT9B06Q22(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'VCT9B06Q22(?:[);/ ]|$)'
+      model: 'Challenger Pro 10.1"'
+    - regex: 'VCT([a-z0-9_-]+)'
+      model: 'VCT$1'
+
 # Verizon
 Verizon:
   regex: 'QTA(SUN[12]|XIA1|QZ3|QZ3KID|IR7)|QMV7[AB]'
