Adds detection for Crosscall Action-X5, Core-M4

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4939,12 +4939,12 @@ Cricket:
 
 # Crosscall
 Crosscall:
-  regex: 'Crosscall|ODYSSEY_Plus|Odyssey S1|Trekker-[MSX][1234]|Action-X3|Core-(?:M5|T4|X[34])'
+  regex: 'Crosscall|ODYSSEY_Plus|Odyssey S1|Trekker-[MSX][1234]|Action-X[35]|Core-(?:M[45]|T4|X[34])'
   device: 'smartphone'
   models:
-    - regex: 'Action-X3'
-      model: 'Action-X3'
-    - regex: 'Core-(M5|X[34])'
+    - regex: 'Action-X([35])'
+      model: 'Action-X$1'
+    - regex: 'Core-(M[45]|X[34])'
       model: 'Core-$1'
     - regex: 'Crosscall ([^;/]+) Build'
       model: '$1'
