--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25595,7 +25595,7 @@ Pico:
 
 # STG Telecom (stgtelecom.com)
 STG Telecom:
-  regex: 'STG[ _](A[12] Pro|[AS]1|X[1-3]|S[1-3]0|B10)(?:[);/ ]|$)'
+  regex: 'STG[ _](A[12] Pro|[AS]1|X[1-3]|S[1-3]0|[BC]10)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
