Adds detection for INSYS brand and INSYS HK9-4010

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9096,7 +9096,6 @@ Innos:
   device: 'smartphone'
   model: '$1'
 
-
 # Innostream
 Innostream:
   regex: 'INNO([a-z0-9]+)'
@@ -9126,6 +9125,14 @@ Insignia:
     - regex: 'AFTJMST12'
       model: '4K (2018)'
       device: 'tv'
+
+# INSYS (https://www.insys.pt/)
+INSYS:
+  regex: 'HK9-4010(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'HK9-4010'
+      model: 'HK9-4010'
 
 # Inq
 INQ:
