Adds detection for Auchan brand and Auchan Selecline S4T7IN

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2930,6 +2930,14 @@ Asus:
       device: 'desktop'
       model: 'Chromebook Flip $1'
 
+# Auchan (https://www.auchan.lu/)
+Auchan:
+  regex: 'S4T7IN(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'S4T7IN(?:[);/ ]|$)'
+      model: 'Selecline S4T7IN'
+
 # Audiovox
 Audiovox:
   regex: 'Audiovox|CDM|UTS(?:TARCOM)?\-|audio(?!book)[a-z0-9\-]+'
