--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9388,3 +9388,21 @@
     model: Challenger Pro 10.1"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; S4T7IN Build/LMY47V) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.93 Safari/537.36
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 43.0.2357.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Auchan
+    model: Selecline S4T7IN
+  os_family: Android
+  browser_family: Chrome
