Adds detection for Türk Telekom brand and Türk Telekom TT175
ref #5898

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23018,7 +23018,15 @@ Turkcell:
   device: 'smartphone'
   models:
     - regex: 'T80(?:[);/ ]|$)'
-      model: 'T80'
+      model: 'T80' # ZTE
+
+# Türk Telekom (https://www.turktelekom.com.tr/)
+Türk Telekom:
+  regex: 'Turk Telekom'
+  device: 'smartphone'
+  models:
+    - regex: 'TT175(?:[);/ ]|$)'
+      model: 'TT175'
 
 # Jinga (jinga.ru)
 Jinga:
