--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17502,7 +17502,7 @@ G-Touch:
 
 # T-Mobile
 T-Mobile:
-  regex: 'T-Mobile[ _][a-z0-9 ]+|(?:REVVLRY\+?|REVVL V\+ 5G|REVVL 2(?: PLUS)?|5062[ZW]|5007[ZW]|T790[WZ])(?:[);/ ]|$)'
+  regex: 'T-Mobile[ _][a-z0-9 ]+|(?:REVVLRY\+?|REVVL V\+ 5G|REVVL 2(?: PLUS)?|5062[ZW]|5007[ZW]|T790[WZ]|Telekom Puls)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '5062[ZW]'
@@ -17519,6 +17519,8 @@ T-Mobile:
       model: 'REVVL Plus'
     - regex: 'REVVL 2(?:[);/ ]|$)'
       model: 'REVVL 2'
+    - regex: 'Telekom Puls(?:[);/ ]|$)'
+      model: 'Telekom Puls'
     - regex: 'T-Mobile[ _]([a-z0-9_ ]+) Build'
       model: '$1'
     - regex: 'T-Mobile[ _]([a-z0-9_ ]+)'
