--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9406,3 +9406,21 @@
     model: Selecline S4T7IN
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.2; HR-V101 Build/HR-V101; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36 OPR/46.1.2254.55193
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 46.1.2254.55193
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Haier
+    model: HR-V101
+  os_family: Android
+  browser_family: Opera
