--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9424,3 +9424,19 @@
     model: HR-V101
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; SM-T561 Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/33.0.0.0 Safari/537.36 Instagram 27.0.0.11.97 Android (19/4.4.4; 160dpi; 800x1280; samsung; SM-T561; gtel3g; sc8830; ru_RU)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 27.0.0.11.97
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab E 9.6" 3G
+  os_family: Android
+  browser_family: Unknown
