--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9402,8 +9402,8 @@
     engine_version: ""
   device:
     type: tablet
-    brand: Auchan
-    model: Selecline S4T7IN
+    brand: Selecline
+    model: S4T7IN
   os_family: Android
   browser_family: Chrome
 -
