--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2930,14 +2930,6 @@ Asus:
       device: 'desktop'
       model: 'Chromebook Flip $1'
 
-# Auchan (https://www.auchan.lu/)
-Auchan:
-  regex: 'S4T7IN(?:[);/ ]|$)'
-  device: 'tablet'
-  models:
-    - regex: 'S4T7IN(?:[);/ ]|$)'
-      model: 'Selecline S4T7IN'
-
 # Audiovox
 Audiovox:
   regex: 'Audiovox|CDM|UTS(?:TARCOM)?\-|audio(?!book)[a-z0-9\-]+'
@@ -23795,6 +23787,14 @@ Zatec:
       model: 'Zpower (2018)'
     - regex: 'Zpower_Plus'
       model: 'Zpower Plus'
+
+# Selecline (https://www.auchan.lu/)
+Selecline:
+regex: 'S4T7IN(?:[);/ ]|$)'
+device: 'tablet'
+models:
+  - regex: 'S4T7IN(?:[);/ ]|$)'
+    model: 'S4T7IN'
 
 # Selenga
 Selenga:
