--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23016,7 +23016,7 @@ TurboKids:
 
 # Turkcell (https://www.turkcell.com.tr/)
 Turkcell:
-  regex: 'TURKCELL'
+  regex: 'TURKCELL[_ ]'
   device: 'smartphone'
   models:
     - regex: 'T80(?:[);/ ]|$)'
@@ -23790,11 +23790,11 @@ Zatec:
 
 # Selecline (https://www.auchan.lu/)
 Selecline:
-regex: 'S4T7IN(?:[);/ ]|$)'
-device: 'tablet'
-models:
-  - regex: 'S4T7IN(?:[);/ ]|$)'
-    model: 'S4T7IN'
+  regex: 'S4T7IN(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'S4T7IN(?:[);/ ]|$)'
+      model: 'S4T7IN'
 
 # Selenga
 Selenga:
