--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -3129,3 +3129,37 @@
     model: VS5502
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Studio G2 HD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.82 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 93.0.4577.82
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Blu
+    model: Studio G2 HD
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Studio XL 2 Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3497.100 Mobile Safari/537.36 JsSdk/2 TopBuzz/7.4.0 NetType/WIFI
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: TopBuzz
+    version: 7.4.0
+  device:
+    type: smartphone
+    brand: Blu
+    model: Studio XL 2
+  os_family: Android
+  browser_family: Unknown
