--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23019,8 +23019,20 @@ Turkcell:
   regex: 'TURKCELL[_ ]'
   device: 'smartphone'
   models:
-    - regex: 'T80(?:[);/ ]|$)'
-      model: 'T80' # ZTE
+    - regex: 'Turbo T50(?:[);/ ]|$)'
+      model: 'Turbo T50'
+    - regex: 'T([124-8])0(?:[);/ ]|$)'
+      model: 'T$10'
+    - regex: 'Maxi Plus 5(?:[);/ ]|$)'
+      model: 'T21 Maxi Plus 5'
+    - regex: 'Maxi Plus 5(?:[);/ ]|$)'
+      model: 'T21 Maxi Plus 5'
+    - regex: 'MaxiPRO5(?:[);/ ]|$)'
+      model: 'T21 Maxi Pro 5' # Huawei
+
+    - regex: 'Turkcell_T_Tablet(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'T Tablet'
 
 # Türk Telekom (https://www.turktelekom.com.tr/)
 Türk Telekom:
